--- a/style.css
+++ b/style.css
@@ -2,4 +2,12 @@
     border:3px inset rebeccapurple;
     border-radius: 8px;
     margin:50px 50px 200px ;
+  
+}
+.a2{
+    color: rgb(233, 233, 233);
+    background-color: rgb(36, 37, 37);
+    text-decoration-color:rgb(16, 78, 16) ;
+    text-decoration-thickness:5px ;
+    text-shadow:4px 4px 2px rgb(18, 161, 102),0 0 2px rgb(6, 14, 6);
 }
