--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@
   
 .photo{
     position: relative;
+  
+   
 }
 .topleft{
     position: absolute;
@@ -100,7 +102,7 @@
 } 
 .sb1{
     position: relative;
-    margin-top: 10px;
+    margin-top: 20px;
     background-color: rgb(29, 119, 197);
     height: 400px;
     width: 400px;
@@ -122,6 +124,43 @@
     bottom: 0px;
    right: 0px;
    border: 2px solid black;
+}
+.p2{
+    height: 1000px;
+    width: 1000px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0.3;
+}
+.p2:hover{
+    opacity: 0.9;
+}
+.l1{
+    background-color: beige;
+    text-align: center;
+    font-size: 40px;
+}
+a:link{
+    color:  rgb(27, 176, 221);
+}
+a:visited{
+    color: rgb(27, 139, 42);
+}
+a:hover{
+    color: chocolate;
+}
+a:active{
+     color: gold;
+}
+.top{
+    background-color: rgb(37, 36, 36);
+    color: rgb(143, 63, 63);
+    font-size: 30px;
+    text-align: center;
+}
+.top:hover{
+  background-color: rgb(204, 210, 216);
 }
 
   
