--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
 }
 
 .main{
+    position: relative;
+    margin-top: 200px;
+    margin-left: 30%;
     background-color: aqua;
     height: 400px;
     width: 400px;
@@ -40,7 +43,7 @@
   
 .photo{
     position: relative;
-  
+    margin-left: 30%;
    
 }
 .topleft{
@@ -80,6 +83,7 @@
     font-size: 18px;
   }
 .s1{
+    margin-left: 30%;
     background-color: red;
     height: 400px;
     width: 400px
@@ -101,6 +105,7 @@
     top: 50px;
 } 
 .sb1{
+    margin-left: 30%;
     position: relative;
     margin-top: 20px;
     background-color: rgb(29, 119, 197);
@@ -162,6 +167,8 @@ a:active{
 .top:hover{
   background-color: rgb(204, 210, 216);
 }
+
+.
 
   
 
