--- a/style.css
+++ b/style.css
@@ -168,7 +168,25 @@ a:active{
   background-color: rgb(204, 210, 216);
 }
 
-.
+.flexc{
+
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgb(37, 37, 139);
+    flex-direction: column;
+    align-items: start;
+    
+     height: 400px;
+     width: 400px;
+} 
+ .flexc>div {
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+    width: 40px;
+    text-align: center;
+  } 
 
   
 
